CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.5

	- The scheduler stopped sending CUPS browse packets on a
	  restart when using fixed addresses (STR #2618)
	- Fixed PDF filter security issues (CVE-2007-4352
	  CVE-2007-5392 CVE-2007-5393)
	- Changing settings would always change the DefaultAuthType
	  and Allow lines (STR #2580)
	- The scheduler would crash when submitting an undefined
	  format file from Samba with LogLevel debug2 (STR #2600)
	- The scheduler did not use poll() when epoll() was not
	  supported by the running kernel (STR #2582)
	- Fixed a compile problem with Heimdal Kerberos (STR #2592)
	- The USB backend now retries connections to a printer
	  indefinitely rather than stopping the queue.
	- Printers with untranslated JCL options were not exported
	  to Samba correctly (STR #2570)
	- The USB backend did not work with some Minolta USB
	  printers (STR #2604)
	- The strcasecmp() emulation code did not compile (STR
	  #2612)
	- The scheduler would crash if a job was sent to an empty
	  class (STR #2605)
	- The lpc command did not work in non-UTF-8 locales (STR
	  #2595)
	- Subscriptions for printer-stopped events also received
	  other state changes (STR #2572)
	- cupstestppd incorrectly reported translation errors for
	  the "en" locale.
	- ppdOpen() did not handle custom options properly when the
	  Custom attribute appeared before the OpenUI for that
	  option.
	- The scheduler could crash when deleting a printer or
	  listing old jobs.
	- The Mac OS X USB backend did not allow for requeuing of
	  jobs submitted to a class.
	- lpmove didn't accept a job ID by itself.
	- The scheduler incorrectly removed job history information
	  for remote print jobs.
	- The scheduler incorrectly sent the
	  "com.apple.printerListChanged" message for printer state
	  changes.
	- The PostScript filter drew the page borders (when enabled)
	  outside the imageable area.
	- The LPD and IPP backends did not default to the correct