@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.5
 
+	- The scheduler incorrectly removed auth-info attributes,
+	  potentially leading to a loss of all options for a job.
 	- The scheduler stopped sending CUPS browse packets on a
 	  restart when using fixed addresses (STR #2618)
 	- Fixed PDF filter security issues (CVE-2007-4352
